<resources>
    <string name="app_name">Numa</string>
    <string name="no_camera_found">No camera found</string>
    <string name="camera_in_use">Camera in use or unavailable</string>
    <string name="capture">Take photos</string>
    <string name="permission_denied">Camera permission denied</string>
    <string name="activity_pre_photo_title">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</string>
    <string name="photo_taken_successfully">Photo taken successfully</string>
    <string name="something_went_wrong">Something went wrong:</string>
    <string name="fetch_bill_foreground">Fetch bill foreground</string>
    <string name="fetch_bill_background">Fetch bill background</string>
    <string name="uploading_message">Uploading…</string>
    <string name="success_upload_no_response">Uploaded successfully without any response</string>
    <string name="note_identification">Note Identification</string>
    <string name="coin_identification">Coin Identification</string>
    <string name="my_collection">My Collection</string>
    <string name="grade_estimate">Grade Estimate</string>
    <string name="want_to_buy">Want to Buy</string>
    <string name="want_to_sell">Want to Sell</string>
    <string name="financing_information">Financing Information</string>
    <string name="numa">numa</string>
    <string name="front_side">FRONT SIDE</string>
    <string name="back_side">BACK SIDE</string>
    <string name="processing">Processing…</string>
    <string name="back">Back</string>
    <string name="ebay">eBay</string>
    <string name="population">Population</string>
    <string name="auction_house">Auction House</string>
    <string name="get_grade">Get Grade</string>
    <string name="alert_message">Now take a photo of the back side of the note</string>
    <string name="alert_title">Success</string>
    <string name="OK">OK</string>
</resources>
