<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/black"
    tools:context=".PrePhotosActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_margin="20dp"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:text="@string/note_identification"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="1dp"
        android:layout_weight="1"
        android:layout_height="0dp" />

    <TextView
        android:id="@+id/activity_pre_photo_textbox"
        android:layout_width="wrap_content"
        android:layout_margin="24dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:text="@string/activity_pre_photo_title"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="1dp"
        android:layout_weight="1"
        android:layout_height="0dp" />

    <TextView
        android:id="@+id/activity_pre_photo_btn_take_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:background="@drawable/secondary_button"
        android:layout_marginBottom="30dp"
        android:layout_gravity="bottom|center_horizontal"
        android:text="@string/capture"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:foreground="?attr/selectableItemBackground"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

</LinearLayout>