<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
      android:background="@drawable/note_identification_bg"

          tools:context=".ResultActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_margin="20dp"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:text="@string/note_identification"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="1dp"
        android:layout_weight="1"
        android:layout_height="0dp" />

    <TextView
        android:id="@+id/activity_result_result_textbox"
        android:layout_width="wrap_content"
        android:layout_margin="24dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="1dp"
        android:layout_weight="1"
        android:layout_height="0dp" />

    <TextView
        android:id="@+id/activity_result_btn_take_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:background="@drawable/secondary_button"
        android:layout_marginBottom="30dp"
        android:layout_gravity="bottom|center_horizontal"
        android:text="@string/capture"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:foreground="?attr/selectableItemBackground"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/activity_result_btn_get_grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:background="@drawable/secondary_invert_button"
        android:layout_marginBottom="30dp"
        android:layout_gravity="bottom|center_horizontal"
        android:text="@string/get_grade"
        android:paddingRight="33dp"
        android:paddingLeft="33dp"
        android:paddingTop="10dp"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp"
        android:foreground="?attr/selectableItemBackground"
        android:textAllCaps="false"
        android:textColor="#B2A973" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <FrameLayout
                android:id="@+id/activity_result_btn_wants_to_buy"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                tools:ignore="NestedWeights">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:background="@drawable/secondary_black_button"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:text="@string/want_to_buy"
                    android:layout_height="40dp" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/activity_result_btn_wants_to_sell"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                tools:ignore="NestedWeights">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:background="@drawable/secondary_black_button"
                    android:text="@string/want_to_sell"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:layout_height="40dp" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:baselineAligned="false">

            <FrameLayout
                android:id="@+id/activity_result_btn_my_collection"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                tools:ignore="NestedWeights">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:background="@drawable/secondary_black_button"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:text="@string/my_collection"
                    android:layout_height="40dp" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/activity_result_btn_ebay"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                tools:ignore="NestedWeights">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:background="@drawable/secondary_black_button"
                    android:text="@string/ebay"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:layout_height="40dp" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:baselineAligned="false">

            <FrameLayout
                android:id="@+id/activity_result_btn_population"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                tools:ignore="NestedWeights">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:background="@drawable/secondary_black_button"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:text="@string/population"
                    android:layout_height="40dp" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/activity_result_btn_action_house"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                tools:ignore="NestedWeights">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:background="@drawable/secondary_black_button"
                    android:text="@string/auction_house"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:layout_height="40dp" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>